--- a/_docs/site-network/Q1_2S.md
+++ b/_docs/site-network/Q1_2S.md
@@ -28,29 +28,30 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 ### Site description
 
-Q1.2 is located in a very narrow valley where the river Opanccay has cut steeply back in to the lower slopes of the sierra Razuhuillca. The study site is situated immediately above a footbridge crossing the river on the trail up to the nearby Sirenachayoc waterfall. A large rock forms the left bank while the right bank, formed from stones and silt, is less clearly defined.
+Q1.2 is located in a very narrow valley where the river Opanccay (southern tributary) has cut steeply back in to the lower slopes of the sierra Razuhuillca. The study site is situated immediately above a footbridge crossing the river on the trail up to the nearby Sirenachayoc waterfall. A large rock forms the left bank while the right bank, formed from stones and silt, is less clearly defined.
 
 Access for taking measurements is best from the right bank when the river level is low, however, its  precise position may vary on a seasonal basis with the shifting of the deposits, while some measurements are best taken from the bridge. A rise and fall in the river level may also impact upon the precise location of the site. Some measurements are best taken from the bridge.
 
-Access and parking is from the small settlement of Ñahuinpuquio (where a s/1 per person entry fee is charged to visit the waterfall). The site is located about 750 metres up the trail to the waterfall.
+Access and parking is from the small settlement of Ñahuinpuquio (where a s/1 per person entry fee is sometimes charged to visit the waterfall). The site is located about 750 metres up the trail to the waterfall.
 
 (Comments on geology, vegetation and fauna will be added post-future field visits).
 
-NB. In March and June 2023, the original intention was to visit a site where the river is bridged by either the new or old Huanta to Luricocha roads but at both locations there was minimal water in the river that day. These locations will be checked again as potential sites on future visits.
+NB. In March, June & November 2023, the original intention was to visit a site where the river is bridged by either the new or old Huanta to Luricocha roads but both sites on all three occasions there was minimal water in the river. These locations will be checked again as potential sites on future visits.
+
 
 ### Descripción del sitio
 
-Q1.2 está situado en un valle muy estrecho donde el río Opanccay ha cortado abruptamente en las laderas más bajas de la sierra Razuhuillca. 
+Q1.2 está situado en un valle muy estrecho donde el río Opanccay (afluente sur) ha cortado abruptamente en las laderas más bajas de la sierra Razuhuillca. 
 
 El sitio de estudio está situado inmediatamente por encima de un puente que cruza el río en el sendero que sube a la cercana cascada de Sirenachayoc. Una roca forma la orilla izquierda, mientras que la orilla derecha, formada por piedras y limo, está menos claramente definida.
 
 El mejor acceso para realizar mediciones es desde la orilla derecha cuando el nivel del río es bajo; sin embargo, su posición exacta puede variar estacionalmente con el desplazamiento de los depósitos, mientras que algunas medidas se toman mejor desde el puente. Las subidas y bajadas del nivel del río también pueden influir en la ubicación exacta del lugar.
 
-El acceso y el aparcamiento se realizan desde el pequeño pueblito de Ñahuinpuquio (donde se cobra una entrada de s/1 por persona para visitar la cascada). El sitio se encuentra a unos 750 metros por el sendero que lleva a la cascada.
+El acceso y el aparcamiento se realizan desde el pequeño pueblito de Ñahuinpuquio (donde a veces se cobra una entrada de s/1 por persona para visitar la cascada). El sitio se encuentra a unos 750 metros por el sendero que lleva a la cascada.
 
 (Los comentarios sobre la geología, vegetación y fauna se añadirán tras futuras visitas de campo).
 
-NB. En marzo y junio de 2023, la intención original era visitar un sitio río abajo donde el río es puenteado ya sea por la nueva o antigua carretera de Huanta a Luricocha, pero en ambos lugares había poca agua en el río ese día. Estos lugares serán revisados nuevamente como sitios potenciales en futuras visitas.
+NB. En marzo, junio y noviembre de 2023, la intención original era visitar un sitio río abajo donde el río es puenteado ya sea por la nueva o antigua carretera de Huanta a Luricocha, pero en ambos lugares había poca agua en el río los tres veces. Estos lugares serán revisados nuevamente como sitios potenciales en futuras visitas.
 
 
 ### Data analysis / Análisis de datos
@@ -59,33 +60,35 @@ NB. En marzo y junio de 2023, la intención original era visitar un sitio río a
 
 (Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
+
 ### River & water quality data / Datos fluviales y de calidad del agua
 
 The following river and water quality data was collected from this site:
 
 En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
-|      Site / Sitio: Q1.2                                  |       March/ marzo 2023                             |       June / junio 2023            |
-|----------------------------------------------------------|-----------------------------------------------------|------------------------------------|
-|     Season / Temporada:                                  |     Austral Summer / Verano                         |     Austral Winter / Invierno      |
-|     Date / Fecha:                                        |     16.3.23                                         |     21.6.23                        |
-|     Time / Hora:                                         |     9.15                                            |     9.00                           |
-|     Width / Ancho (m)                                    |     4.70                                            |     3.24                           |
-|     Depth / Profundidad (Av.) (m)                        |     0.22                                            |     0.22                           |
-|     CSA / Area traversal (Av.) (m²)                      |     1.03                                            |     0.71                           |
-|     Velocity / Velocidad  (Av.) (m/s)                    |     0.45                                            |     0.207                          |
-|     Discharge / Caudal (Av.) (m³/s)                      |     0.465                                           |     0.148                          |
-|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Mas rocas                     |     Mainly boulders / Mas rocas    |
-|     Temperature (Atmospheric) (°C)                       |     17.9                                            |     11.5                           |
-|     Temperature (Water / Agua) (°C)                      |     11.84                                           |     7.35                           |
-|     Atmospheric pressure / presión (mbar)                |     767.4                                           |     767.7                          |
-|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |                                                     |     10.05                          |
-|     Dissolved oxygen / Oxigeno disuelto (%)              |                                                     |     112.0                          |
-|     pH                                                   |     8.68                                            |     8.56                           |
-|     Conductivity / Conductividad (µS/cm)                 |     220                                             |     281                            |
-|     Total Dissolved Solids (TDS / STD)  (ppm)            |     110                                             |     141                            |
-|     ORP (mV)                                             |     228.1                                           |     146.1                          |
-|     Turbidity / Turbidez                                 |     Slightly green brown / Un poco verde marron     |     Clear / Transparente           |
-|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     123 (1.6N)                                      |     184 (1.6N)                     |
-|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     116                                             |     144                            |
+|     Site / Sitio: Q1.2S                                  |     March/ marzo 2023                               |     June / junio 2023              |     November / noviembre 2023      |
+|----------------------------------------------------------|-----------------------------------------------------|------------------------------------|------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano                         |     Austral Winter / Invierno      |     Austral Winter / Invierno      |
+|     Date / Fecha:                                        |     16.3.23                                         |     21.6.23                        |     19.11.23                       |
+|     Time / Hora:                                         |     9.15                                            |     9.00                           |     12.00                          |
+|     Width / Ancho (m)                                    |     4.70                                            |     3.24                           |     2.70                           |
+|     Depth / Profundidad (Av.) (m)                        |     0.22                                            |     0.22                           |     0.17                           |
+|     CSA / Area traversal (Av.) (m²)                      |     1.03                                            |     0.71                           |     0.459                          |
+|     Velocity / Velocidad    (Av.) (m/s)                  |     0.45                                            |     0.207                          |     0.230                          |
+|     Discharge / Caudal (Av.) (m³/s)                      |     0.465                                           |     0.148                          |     0.106                          |
+|     Riverbed sediment / Sedimentos                       |     Mainly boulders / Mas  rocas                    |     Mainly boulders / Mas rocas    |     Mainly boulders / Mas rocas    |
+|     Temperature (Atmospheric) (°C)                       |     17.9                                            |     11.5                           |     28.2                           |
+|     Temperature (Water / Agua) (°C)                      |     11.84                                           |     7.35                           |     16.04                          |
+|     Atmospheric pressure / presión (mbar)                |     767.4                                           |     767.7                          |     770.1                          |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |                                                     |     10.05                          |     6.39                           |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |                                                     |     112.0                          |     86.9                           |
+|     pH                                                   |     8.68                                            |     8.56                           |     8.66                           |
+|     Conductivity / Conductividad (µS/cm)                 |     220                                             |     281                            |     229                            |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     110                                             |     141                            |     114                            |
+|     ORP (mV)                                             |     228.1                                           |     146.1                          |     121.2                          |
+|     Turbidity / Turbidez                                 |     Slightly green/brown Un poco   verde/marron     |     Clear / Transparente           |     Clear / Transparente           |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     123 (1.6N)                                      |     184 (1.6N)                     |     158 (1.6N)                     |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     116                                             |     144                            |     122                            |
+
 
