--- a/_docs/site-network/Q1_2N.md
+++ b/_docs/site-network/Q1_2N.md
@@ -4,8 +4,54 @@ permalink: /docs/Q1_2N/
 ---
 
 
-### Site Q1.2N: Middle OpanccayNorte - Opanccay Medio Norte
+### Site Q1.2N: Middle Opanccay Norte - Opanccay Medio Norte
 
-GPS: S12°897075, W74°260600
+GPS: S12°897090, W74°260605
 Elevation: 2720m asl.
 
+
+![Q1.2](/assets/sites/Q1.2N.jpg)
+Aerial view of study site / Vista aérea del lugar del estudio (November 2023) (John Forrest)
+
+
+![Q1.2site](/assets/sites/Q1.2Nsite.jpg)
+The study site / El lugar del estudio (November 2023) (John Forrest)
+
+
+![Q1.2downstream](/assets/sites/Q1.2Ndownstream.jpg)
+View downstream from the study site / Visita rio abajo del lugar del estudio (November 2023) (John Forrest)
+
+
+![Q1.2upstream](/assets/sites/Q1.2Nupstream.jpg)
+View upstream from the study site / Vista rio arriba desde el lugar del estudio (November 2023) (John Forrest)
+
+
+### Site description
+
+Q1.2N is located where the river Opanccay (northern tributary) emerges from a narrow incised valley that has cut steeply back in to the lower slopes of the sierra Razuhuillca. The study site is situated immediately below a bridge where a ford crosses the river.
+
+The measurements are best taken across the ford which has a concrete base, however, the precise position may vary on a seasonal basis. 
+
+Access is up a series of tracks running up the right hand bank opposite the settlement of Luricocha.
+
+(Comments on geology, vegetation and fauna will be added post-future field visits).
+
+
+### Descripción del sitio
+
+
+(Los comentarios sobre la geología, vegetación y fauna se añadirán tras futuras visitas de campo).
+
+
+### Data analysis / Análisis de datos
+
+(Analytical comments with respect to the data will be posted once a site has been visited at least twice).
+
+(Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
+
+
+### River & water quality data / Datos fluviales y de calidad del agua
+
+The following river and water quality data was collected from this site:
+
+En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
