--- a/_docs/site-network/Q1_2S.md
+++ b/_docs/site-network/Q1_2S.md
@@ -28,9 +28,9 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 ### Site description
 
-Q1.2 is located in a very narrow valley where the river Opanccay (southern tributary) has cut steeply back in to the lower slopes of the sierra Razuhuillca. The study site is situated immediately above a footbridge crossing the river on the trail up to the nearby Sirenachayoc waterfall. A large rock forms the left bank while the right bank, formed from stones and silt, is less clearly defined.
+Q1.2S is located in a very narrow valley where the river Opanccay (southern tributary) has cut steeply back in to the lower slopes of the sierra Razuhuillca. The study site is situated immediately above a footbridge crossing the river on the trail up to the nearby Sirenachayoc waterfall. A large rock forms the left bank while the right bank, formed from stones and silt, is less clearly defined.
 
-Access for taking measurements is best from the right bank when the river level is low, however, its  precise position may vary on a seasonal basis with the shifting of the deposits, while some measurements are best taken from the bridge. A rise and fall in the river level may also impact upon the precise location of the site. Some measurements are best taken from the bridge.
+Access for taking measurements is best from the right bank when the river level is low, however, its  precise position may vary on a seasonal basis with the shifting of the deposits, while some measurements are best taken from the bridge. A rise and fall in the river level may also impact upon the precise location of the site.
 
 Access and parking is from the small settlement of Ñahuinpuquio (where a s/1 per person entry fee is sometimes charged to visit the waterfall). The site is located about 750 metres up the trail to the waterfall.
 
@@ -41,7 +41,7 @@ NB. In March, June & November 2023, the original intention was to visit a site w
 
 ### Descripción del sitio
 
-Q1.2 está situado en un valle muy estrecho donde el río Opanccay (afluente sur) ha cortado abruptamente en las laderas más bajas de la sierra Razuhuillca. 
+Q1.2S está situado en un valle muy estrecho donde el río Opanccay (afluente sur) ha cortado abruptamente en las laderas más bajas de la sierra Razuhuillca. 
 
 El sitio de estudio está situado inmediatamente por encima de un puente que cruza el río en el sendero que sube a la cercana cascada de Sirenachayoc. Una roca forma la orilla izquierda, mientras que la orilla derecha, formada por piedras y limo, está menos claramente definida.
 
