--- a/_docs/site-network/Q1_2N.md
+++ b/_docs/site-network/Q1_2N.md
@@ -30,7 +30,7 @@ View upstream from the study site / Vista rio arriba desde el lugar del estudio 
 
 Q1.2N is located where the river Opanccay (northern tributary) emerges from a narrow incised valley that has cut steeply back in to the lower slopes of the sierra Razuhuillca. The study site is situated immediately below a bridge where a ford crosses the river.
 
-The measurements are best taken across the ford which has a concrete base, however, the precise position may vary on a seasonal basis. 
+The measurements are best taken across the ford which has a concrete base, however, the precise position may vary on a seasonal basis and the deposited sediments.
 
 Access is up a series of tracks running up the right hand bank opposite the settlement of Luricocha.
 
@@ -39,6 +39,11 @@ Access is up a series of tracks running up the right hand bank opposite the sett
 
 ### Descripción del sitio
 
+Q1.2N está ubicado donde el río Opanccay (afluente norte) emerge de un estrecho valle incisivo que se ha cortado abruptamente en las laderas más bajas de la sierra Razuhuillca. El sitio de estudio está situado inmediatamente debajo de un puente donde un vado (badan) cruza el río.
+
+Las mediciones se realizan mejor a través del vado (badan) que tiene una base de hormigón, sin embargo, la posición precisa puede variar según la estación y los depositos de sedimentos por el lecho del rio.
+
+El acceso es por una serie de senderos que suben por la orilla derecha frente al asentamiento de Luricocha.
 
 (Los comentarios sobre la geología, vegetación y fauna se añadirán tras futuras visitas de campo).
 
@@ -55,3 +60,28 @@ Access is up a series of tracks running up the right hand bank opposite the sett
 The following river and water quality data was collected from this site:
 
 En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
+
+|     Site / Sitio: Q1.2N                                  |     November / noviembre 2023                  |
+|----------------------------------------------------------|------------------------------------------------|
+|     Season / Temporada:                                  |     Austral Winter / Invierno                  |
+|     Date / Fecha:                                        |     26.11.23                                   |
+|     Time / Hora:                                         |     10.00                                      |
+|     Width / Ancho (m)                                    |     4.60                                       |
+|     Depth / Profundidad (Av.) (m)                        |     0.08                                       |
+|     CSA / Area traversal (Av.) (m²)                      |     0.350                                      |
+|     Velocity / Velocidad    (Av.) (m/s)                  |     0.393                                      |
+|     Discharge / Caudal (Av.) (m³/s)                      |     0.138                                      |
+|     Riverbed sediment / Sedimentos                       |     Cobbles & Pebbles / Piedras y Piedritas    |
+|     Temperature (Atmospheric) (°C)                       |     26.0                                       |
+|     Temperature (Water / Agua) (°C)                      |     13.71                                      |
+|     Atmospheric pressure / presión (mbar)                |     774.6                                      |
+|     Dissolved oxygen /  Oxigeno disuelto (mg/l)          |     6.62                                       |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |     83.8                                       |
+|     pH                                                   |     8.58                                       |
+|     Conductivity / Conductividad (µS/cm)                 |     300                                        |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     150                                        |
+|     ORP (mV)                                             |     117.4                                      |
+|     Turbidity / Turbidez                                 |     Clear / Transparente                       |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     192 (1.6N)                                 |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     149                                        |
+
