--- a/_docs/site-network/Q1_2N.md
+++ b/_docs/site-network/Q1_2N.md
@@ -14,15 +14,15 @@ Elevation: 2720m asl.
 Aerial view of study site / Vista aérea del lugar del estudio (November 2023) (John Forrest)
 
 
-![Q1.2site](/assets/sites/Q1.2Nsite.jpg)
+![Q1.2site](/assets/sites/Q1.2Nsite.JPG)
 The study site / El lugar del estudio (November 2023) (John Forrest)
 
 
-![Q1.2downstream](/assets/sites/Q1.2Ndownstream.jpg)
+![Q1.2downstream](/assets/sites/Q1.2Ndownstream.JPG)
 View downstream from the study site / Visita rio abajo del lugar del estudio (November 2023) (John Forrest)
 
 
-![Q1.2upstream](/assets/sites/Q1.2Nupstream.jpg)
+![Q1.2upstream](/assets/sites/Q1.2Nupstream.JPG)
 View upstream from the study site / Vista rio arriba desde el lugar del estudio (November 2023) (John Forrest)
 
 
