--- a/_docs/site-network/Q2_1.md
+++ b/_docs/site-network/Q2_1.md
@@ -32,7 +32,7 @@ Q2.1 is located in a small valley with a narrow flood-plain cutting through the 
 
 The study site is situated about 100 metres above the confluence of the river Huanta with the river Cachi. Access for taking measurements is best from the right bank when the river level is low. When the river is high it may not be possible to cross the river. A rise and fall in the river level may also impact upon the precise location of the site.
 
-Access is along the right bank of the river down a rough track through and beyond the Hacienda San Jose de Toyas. The road ends about 1km beyond the hacienda amongst scrubby vegetation at the river Cachi though in June 2023 much of the vegetation on the right bank had just been cleared.
+Access is along the right bank of the river down a rough track through and beyond the Hacienda San Jose de Toyas. The road ends about 1km beyond the hacienda amongst scrubby vegetation though in June 2023 much of the vegetation on the right bank had just been cleared. A path leads from the track to a gate which provides access to woodland through which the river runs.
 
 (Comments on geology, vegetation and fauna will be added post-future field visits).
 
@@ -42,7 +42,7 @@ Q2.1 se encuentra en un pequeño valle con una estrecha llanura de inundación q
 
 El sitio de estudio está situado a unos 100 metros por encima de la confluencia del río Huanta con el río Cachi. El acceso para realizar las mediciones es mejor desde la margen derecha cuando el nivel del río es bajo. Cuando el río está alto, puede que no sea posible cruzar el río. La subida y bajada del nivel del río también puede afectar la ubicación precisa del sitio.
 
-El acceso se realiza a lo largo de la orilla derecha del río por un camino accidentado a través y más allá de la Hacienda San José de Toyas. El camino termina aproximadamente 1 km después de la hacienda, entre la vegetación de matorrales por las orillas del río Cachi aunque en junio de 2023 se acababa de desbrozar gran parte de la vegetación de la margen derecha.
+El acceso se realiza a lo largo de la orilla derecha del río por un camino accidentado a través y más allá de la Hacienda San José de Toyas. El camino termina aproximadamente 1 km más allá de la hacienda entre vegetación de matorrales, aunque en junio de 2023 gran parte de la vegetación de la orilla derecha acababa de ser despejada. Un sendero baja desde la pista hasta una puerta que da acceso al bosque por el que discurre el río.
 
 (Los comentarios sobre la geología, vegetación y fauna se añadirán tras de futuras visitas de campo).
 
@@ -53,32 +53,33 @@ El acceso se realiza a lo largo de la orilla derecha del río por un camino acci
 
 (Los comentarios analíticos con respecto a los datos se publicarán una vez que se haya visitado un sitio al menos dos veces).
 
+
 ### River & water quality data / Datos fluviales y de calidad del agua
 
 The following river and water quality data was collected from this site:
 
 En este lugar se recogieron los siguientes datos fluviales y de calidad del agua:
 
-|       Site / Sitio: Q2.1                                 |       March / marzo 2023              |       June / junio 2023                        |
-|----------------------------------------------------------|---------------------------------------|------------------------------------------------|
-|     Season / Temporada:                                  |     Austral Summer / Verano           |     Austral Winter / Invierno                  |
-|     Date / Fecha:                                        |     17.3.23                           |     19.6.23                                    |
-|     Time / Hora:                                         |     7.30                              |     9.00                                       |
-|     Width / Ancho (m)                                    |     3.09                              |     2.38                                       |
-|     Depth / Profundidad (Av.) (m)                        |     0.16                              |     0.21                                       |
-|     CSA / Area traversal (Av.) (m²)                      |     0.49                              |     0.50                                       |
-|     Velocity / Velocidad  (Av.) (m/s)                    |     0.42                              |     0.450                                      |
-|     Discharge / Caudal (Av.) (m³/s)                      |     0.208                             |     0.225                                      |
-|     Riverbed sediment / Sedimentos                       |     Mainly pebbles / Mas piedritas    |     Pebbles & cobbles / Piedritas y Piedras    |
-|     Temperature (Atmospheric) (°C)                       |     20.3                              |     20.9                                       |
-|     Temperature (Water / Agua) (°C)                      |     17.92                             |     14.95                                      |
-|     Atmospheric pressure / presión (mbar)                |     804.1                             |     807.3                                      |
-|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |                                       |     9.39                                       |
-|     Dissolved oxygen / Oxigeno disuelto (%)              |                                       |     113.3                                      |
-|     pH                                                   |     8.38                              |     8.36                                       |
-|     Conductivity / Conductividad (µS/cm)                 |     847                               |     874                                        |
-|     Total Dissolved Solids (TDS / STD)  (ppm)            |     424                               |     437                                        |
-|     ORP (mV)                                             |     223.8                             |     80.8                                       |
-|     Turbidity / Turbidez                                 |     Grey Brown / Gris Marron          |     Clear / Transparente                       |
-|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     320 (1.6N)                        |     323 (1.6N)                                 |
-|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     286                               |     382                                        |
+|     Site / Sitio: Q2.1                                   |     March / marzo 2023                |     June / junio 2023                          |     November / noviembre 2023         |
+|----------------------------------------------------------|---------------------------------------|------------------------------------------------|---------------------------------------|
+|     Season / Temporada:                                  |     Austral Summer / Verano           |     Austral Winter / Invierno                  |     Austral Winter / Invierno         |
+|     Date / Fecha:                                        |     17.3.23                           |     19.6.23                                    |     21.11.23                          |
+|     Time / Hora:                                         |     7.30                              |     9.00                                       |     9.30                              |
+|     Width / Ancho (m)                                    |     3.09                              |     2.38                                       |     1.25                              |
+|     Depth / Profundidad (Av.) (m)                        |     0.16                              |     0.21                                       |     0.090                             |
+|     CSA / Area traversal (Av.) (m²)                      |     0.49                              |     0.50                                       |     0.113                             |
+|     Velocity / Velocidad    (Av.) (m/s)                  |     0.42                              |     0.450                                      |     0.427                             |
+|     Discharge / Caudal (Av.) (m³/s)                      |     0.208                             |     0.225                                      |     0.048                             |
+|     Riverbed sediment / Sedimentos                       |     Mainly pebbles / Mas piedritas    |     Pebbles & cobbles / Piedritas y Piedras    |     Mainly pebbles / Mas piedritas    |
+|     Temperature (Atmospheric) (°C)                       |     20.3                              |     20.9                                       |     24.4                              |
+|     Temperature (Water / Agua) (°C)                      |     17.92                             |     14.95                                      |     18.99                             |
+|     Atmospheric pressure / presión (mbar)                |     804.1                             |     807.3                                      |     803.6                             |
+|     Dissolved oxygen /   Oxigeno disuelto (mg/l)         |                                       |     9.39                                       |     5.47                              |
+|     Dissolved oxygen / Oxigeno disuelto (%)              |                                       |     113.3                                      |     72.3                              |
+|     pH                                                   |     8.38                              |     8.36                                       |     8.41                              |
+|     Conductivity / Conductividad (µS/cm)                 |     847                               |     874                                        |     923                               |
+|     Total Dissolved Solids (TDS / STD)  (ppm)            |     424                               |     437                                        |     462                               |
+|     ORP (mV)                                             |     223.8                             |     80.8                                       |     5.9                               |
+|     Turbidity / Turbidez                                 |     Grey/Brown Gris/Marron            |     Clear / Transparente                       |     Clear / Transparente              |
+|     Alkalinity/Alkalinidad   (Titración) (mg/l CaCO₃)    |     320 (1.6N)                        |     323 (1.6N)                                 |     350 (1.6N)                        |
+|     Alkalinity Field Tester (Hanna) (ppm CaCO₃)          |     286                               |     382                                        |     272                               |
